--- a/Sunduk.PWA/Components/Knowledge/FanucMacroVariables.razor
+++ b/Sunduk.PWA/Components/Knowledge/FanucMacroVariables.razor
@@ -1,7 +1,5 @@
 ﻿@using MudBlazor.Services
 <style>
-    .ex{font-family: 'Roboto Mono', monospace; font-size: 12px; padding-right: 10px; padding-left: 5px}
-    .desc{font-size: 12px; font-style: italic; font-weight: lighter; padding-right: 10px; padding-left: 5px}
     table, th, td {
         border: 1px solid gray;
         border-collapse: collapse;
@@ -15,23 +13,186 @@
                 <table>
                     <tbody>
                     <tr>
-                        <td class="ex">#0</td>
-                        <td class="desc">null</td>
+                        <td class="monotext14">#0</td>
+                        <td class="text14">null</td>
+                        <td class="text12">Нельзя переопределить, можно сравнивать.</td>
                     </tr>
                     <tr>
-                        <td class="ex">#1-#33</td>
-                        <td class="desc">Локальные</td>
+                        <td class="monotext14">#1 - #33</td>
+                        <td class="text14">Локальные</td>
+                        <td class="text12">Своя область видимости для каждой подпрограммы, доступно 5 уровней вложения. Обнуление при завершении программы.</td>
                     </tr>
                     <tr>
-                        <td class="ex">#100-#199</td>
-                        <td class="desc" rowspan="2">Общие</td>
+                        <td class="monotext14">#100 - #199</td>
+                        <td class="text14" rowspan="2">Общие</td>
+                        <td class="text12">Обнуление при сбросе УП / перезагрузке станка.</td>
                     </tr>
                     <tr>
-                        <td class="ex">#500-#999</td>
+                        <td class="monotext14">#500 - #999</td>
+                        <td class="text12">Значение сохраняется при сбросе УП / перезагрузке станка.</td>
                     </tr>
                     <tr>
-                        <td class="ex">#1000+</td>
-                        <td class="desc">Системные</td>
+                        <td class="monotext14">#1000+</td>
+                        <td class="text14" colspan="2">Системные</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </MudField>
+        </MudItem>
+        <MudItem xs="12">
+            <MudField Variant=Variant.Filled Label="Функции" DisableUnderLine=true>
+                <table>
+                    <thead>
+                    <tr>
+                        <th class="monotext14">Пример</th>
+                        <th class="monotext14">Описание</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td class="monotext14">#1 = 1</td>
+                        <td class="text14">Присвоение</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = #1 + #2</td>
+                        <td class="text14">Сложение</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = #1 - #2</td>
+                        <td class="text14">Вычитание</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = #1 * #2</td>
+                        <td class="text14">Умножение</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = #1 / #2</td>
+                        <td class="text14">Деление</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = SIN[#2]</td>
+                        <td class="text14">Синус</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = ASIN[#2]</td>
+                        <td class="text14">Арксинус</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = COS[#2]</td>
+                        <td class="text14">Косинус</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = ACOS[#2]</td>
+                        <td class="text14">Арккосинус</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = TAN[#2]</td>
+                        <td class="text14">Тангенс</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = ATAN[#2]</td>
+                        <td class="text14">Арктангенс</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = SQRT[#2]</td>
+                        <td class="text14">Квадратный корень</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = ABS[#2]</td>
+                        <td class="text14">Абсолютное значение (модуль)</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = ROUND[#2]</td>
+                        <td class="text14">Округление</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = FIX[#2]</td>
+                        <td class="text14">Округление в меньшую сторону</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = FUP[#2]</td>
+                        <td class="text14">Округление в большую сторону</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = LN[#2]</td>
+                        <td class="text14">Логарифм</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 = EXP[#2]</td>
+                        <td class="text14">Экспонента</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">[#1EQ1] AND [#2EQ1]</td>
+                        <td class="text14">Логическое "И"</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">[#1=1] OR [#2=1]</td>
+                        <td class="text14">Логическое "ИЛИ"</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">[#1=1] XOR [#2=1]</td>
+                        <td class="text14">Исключающее "ИЛИ"</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </MudField>
+        </MudItem>
+        <MudItem xs="12">
+            <MudField Variant=Variant.Filled Label="Операторы" DisableUnderLine=true>
+                <table>
+                    <thead>
+                    <tr>
+                        <th class="monotext14">Пример</th>
+                        <th class="monotext14">Описание</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td class="monotext14">GOTO (n)</td>
+                        <td class="text14">Переход на кадр</td>
+                    </tr>
+                    <tr>
+                        <th colspan="2">Операторы сравнения</th>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 EQ 1</td>
+                        <td class="text14">Равно</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 NE 1</td>
+                        <td class="text14">Не равно</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 GT 1</td>
+                        <td class="text14">Больше</td>
+                    </tr>
+                    <tr>
+
+                        <td class="monotext14">#1 LT 1</td>
+                        <td class="text14">Меньше</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 GE 1</td>
+                        <td class="text14">Больше или равно</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">#1 LE 1</td>
+                        <td class="text14">Меньше или равно</td>
+                    </tr>
+                    <tr>
+                        <th colspan="2">Условные операторы</th>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">IF[#1&nbspEQ&nbsp1]&nbspGOTO&nbsp(n)</td>
+                        <td class="text14">Если условие выполнено, то переход на кадр.</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">IF[#1&nbspEQ&nbsp1]&nbspTHEN&nbsp#2=1</td>
+                        <td class="text14">Если условие выполнено, выполняется функция.</td>
+                    </tr>
+                    <tr>
+                        <td class="monotext14">WHILE[#1&nbspEQ&nbsp1]&nbspDO&nbsp1<br/>...<br/>END&nbsp1</td>
+                        <td class="text14">Пока выполняется условие, выполняется все между DO и END</td>
                     </tr>
                     </tbody>
                 </table>
@@ -44,7 +205,7 @@
                     <tr>
                         @foreach (var h in headings)
                         {
-                            <th class="ex">@h</th>
+                            <th class="monotext14">@h</th>
                         }
                     </tr>
                     </thead>
@@ -54,7 +215,7 @@
                         <tr>
                             @foreach (var x in row.Split())
                             {
-                                <td class="ex">@x</td>
+                                <td class="monotext14">@x</td>
                             }
                         </tr>
                     }
